Added support for custom client for certificate extraction